tests/ui/func_assign.stderr
[tests/ui/func_assign.pea:3:5-3:7] error: invalid left-hand side of assignment

error: aborting due to 1 previous error

